新增：course_video model中增加文件类型

--- a/templates/course-play.html
+++ b/templates/course-play.html
@@ -40,7 +40,8 @@
         <video id="example_video_1" class="video-js vjs-default-skin" controls preload="auto" width="1200"
                poster="http://video-js.zencoder.com/oceans-clip.png"
                data-setup="{}">
-            <source src="{{ video.url }}" type="video/mp4">
+            <source src="{{ video.url }}"
+                    type="video/{% if video.type %}{{ video.type }}{% else %}mp4{% endif %}">
         </video>
     </div>
 {% endblock %}
