--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                                     </a>
                                 </li>
                                 <li class="{% if current_page == 'teacher_list' %}active{% endif %}">
-                                    <a href="teachers-list.html">授课教师</a>
+                                    <a href="{% url 'org:teacher_list' %}">授课教师</a>
                                 </li>
                                 <li class="{% if current_page == 'org_list' %}active{% endif %}"><a href="{% url 'org:org_list' %}">授课机构</a></li>
                             </ul>
