--- a/templates/teachers-list.html
+++ b/templates/teachers-list.html
@@ -31,7 +31,7 @@
                     {% for teacher in teacher_paginator.object_list %}
                         <dl class="des">
                             <dt>
-                                <a href="/org/teacher/detail/1/">
+                                <a href="{% url 'org:teacher_detail' teacher.id %}">
                                     <div class="picpic">
                                         <img width="100" height="100" class="scrollLoading"
                                              src="{{ MEDIA_URL }}{{ teacher.image }}"/>
@@ -48,7 +48,7 @@
                             </div>
                             </dt>
                             <dd>
-                                <a href="/org/teacher/detail/1/">
+                                <a href="{% url 'org:teacher_detail' teacher.id %}">
                                     <h1>{{ teacher.name }}<span class="key picbig">金牌讲师</span></h1>
                                 </a>
                                 <ul class="cont">
@@ -59,7 +59,7 @@
                                     <li>教学特点：<span>{{ teacher.points }}</span></li>
                                 </ul>
                             </dd>
-                            <a class="buy buyservice" href="/org/teacher/detail/1/"><br/>查看<br/>详情</a>
+                            <a class="buy buyservice" href="{% url 'org:teacher_detail' teacher.id %}"><br/>查看<br/>详情</a>
                         </dl>
                     {% endfor %}
 
@@ -115,7 +115,7 @@
                 {% for teacher in hot_teachers %}
                     <dl class="des">
                         <span class="num fl">{{ forloop.counter }}</span>
-                        <a href="/diary/hk_detail/6/">
+                        <a href="{% url 'org:teacher_detail' teacher.id %}">
                             <dt>
                                 <img width="50" height="50" class="scrollLoading"
                                      src="{{ MEDIA_URL }}{{ teacher.image }}"/>
