--- a/templates/teacher-detail.html
+++ b/templates/teacher-detail.html
@@ -56,7 +56,7 @@
                     <div class="left layout">
                         <div class="head">
                             <ul class="tab_header">
-                                <li class="active"><a href="/diary/hk_detail/10/">全部课程</a></li>
+                                <li class="active">全部课程</li>
                             </ul>
                         </div>
                         <div class="companycenter">
@@ -74,7 +74,7 @@
                                             <span class="fr">学习人数：{{ course.students }}</span>
                                         </div>
                                         <div class="bottom">
-                                            <span class="fl">{{ course.course_org.name }}</span>
+                                            <a href="{% url 'org:org_home' course.course_org.id %}"><span class="fl">{{ course.course_org.name }}</span></a>
                                             <span class="star fr  notlogin" data-favid="15">{{ course.fav_nums }}</span>
                                         </div>
                                     </div>
@@ -100,7 +100,7 @@
                                 <img width="150" height="80" src="{{ MEDIA_URL }}{{ teacher.org.image }}"/>
                             </a>
                         </div>
-                        <a href="org-detail-homepage.html">
+                        <a href="{% url 'org:org_home' teacher.org.id %}">
                             <h2 class="center">{{ teacher.org.name }}</h2>
                         </a>
                         <p class="center tell">地址：{{ teacher.org.city }}</p>
@@ -158,7 +158,7 @@
                 success: function (data) {
                     if (data.status == 'fail') {
                         if (data.msg == '用户未登录') {
-                            window.location.href = "login.html";
+                            window.location.href = "/login/";
                         } else {
                             current_elem.text(data.msg)
                         }
