--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     首页
 {% endblock %}
 
+{% block custom_bread %}{% endblock %}
+
 {% block content %}
+    {# 轮播图 #}
     <div class="banner">
         <div class="wp">
             <div class="fl">
@@ -60,6 +63,7 @@
 
     </div>
 
+    {# 专业权威 课程最新 名师授课 数据真实 #}
     <section>
         <div class="wp">
             <ul class="feature">
@@ -83,6 +87,7 @@
         </div>
     </section>
 
+    {# 公开课程 #}
     <section>
         <div class="module">
             <div class="wp">
@@ -231,6 +236,7 @@
         </div>
     </section>
 
+    {# 课程机构 #}
     <section>
         <div class="module greybg">
             <div class="wp">
