--- a/templates/usercenter-info.html
+++ b/templates/usercenter-info.html
@@ -17,7 +17,7 @@
                 <div class="left" style="width:242px;">
                     <iframe id='frameFile' name='frameFile' style='display: none;'></iframe>
                     <form class="clearfix" id="jsAvatarForm" enctype="multipart/form-data" autocomplete="off"
-                          method="post" action="/users/image/upload/" target='frameFile'>
+                          method="post" action="{% url 'user:upload_image' %}" target='frameFile'>
                         <label class="changearea" for="avatarUp">
                             <span id="avatardiv" class="pic">
                                 <img width="100" height="100" class="js-img-show" id="avatarShow"
@@ -25,11 +25,11 @@
                             </span>
                             <span class="fl upload-inp-box" style="margin-left:70px;">
                                 <span class="button btn-green btn-w100" id="jsAvatarBtn">修改头像</span>
+                                {# input中的name必须与model中一致 #}
                                 <input type="file" name="image" id="avatarUp" class="js-img-up"/>
                             </span>
                         </label>
-                        <input type='hidden' name='csrfmiddlewaretoken'
-                               value='799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'/>
+                        {% csrf_token %}
                     </form>
                     <div style="border-top:1px solid #eaeaea;margin-top:30px;">
                         <a class="button btn-green btn-w100" id="jsUserResetPwd"
