--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -150,21 +150,20 @@
             <h1>修改密码</h1>
             <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
             <div class="cont">
-                <form id="jsResetPwdForm" autocomplete="off">
+                <form id="jsResetPwdForm" autocomplete="off" action="{% url 'user:update_pwd' %}" method="post">
                     <div class="box">
                         <span class="word2">新&nbsp;&nbsp;密&nbsp;&nbsp;码</span>
-                        <input type="password" id="pwd" name="password1" placeholder="6-20位非中文字符"/>
+                        <input type="password" id="pwd" name="password" placeholder="6-20位非中文字符"/>
                     </div>
                     <div class="box">
                         <span class="word2">确定密码</span>
-                        <input type="password" id="repwd" name="password2" placeholder="6-20位非中文字符"/>
+                        <input type="password" id="repwd" name="password_repeat" placeholder="6-20位非中文字符"/>
                     </div>
                     <div class="error btns" id="jsResetPwdTips"></div>
                     <div class="button">
                         <input id="jsResetPwdBtn" type="button" value="提交"/>
                     </div>
-                    <input type='hidden' name='csrfmiddlewaretoken' value='DaP7IUKm9FA9nELA9YUlYYWpyIDdCiIP'/>
-                    <input type='hidden' name='csrfmiddlewaretoken' value='799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'/>
+                    {% csrf_token %}
                 </form>
             </div>
         </div>
@@ -262,7 +261,7 @@
 {% endblock %}
 
 {% block custom_js %}
-    <script src='../js/plugins/jquery.upload.js' type='text/javascript'></script>
+    <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
     <script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/deco-user.js' %}"></script>
 
