--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li{% if request.path|slice:'11' == '/users/info/' %} class="active2"{% endif %}><a href="{% url 'user:user_info' %}">个人资料</a></li>
                     <li{% if request.path|slice:'18' == '/users/my_course/' %} class="active2"{% endif %}><a href="{% url 'user:my_course' %}">我的课程</a></li>
-                    <li{% if request.path|slice:'15' == '/users/my_fav/' %} class="active2"{% endif %}><a href="usercenter-fav-course.html">我的收藏</a></li>
+                    <li{% if request.path|slice:'11' == '/users/fav_' %} class="active2"{% endif %}><a href="{% url 'user:fav_org' %}">我的收藏</a></li>
                     <li{% if request.path|slice:'15' == '/users/my_msg/' %} class="active2"{% endif %}>
                         <a href="usercenter-message.html" style="position: relative;">
                             我的消息
@@ -196,15 +196,14 @@
         $('.jsDeleteFav_course').on('click', function () {
             var _this = $(this),
                 favid = _this.attr('data-favid');
-            alert(favid)
             $.ajax({
                 cache: false,
                 type: "POST",
-                url: "/org/add_fav/",
+                url: "{% url 'org:add_fav' %}",
                 data: {
                     fav_type: 1,
                     fav_id: favid,
-                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 async: true,
                 success: function (data) {
@@ -219,11 +218,11 @@
             $.ajax({
                 cache: false,
                 type: "POST",
-                url: "/org/add_fav/",
+                url: "{% url 'org:add_fav' %}",
                 data: {
                     fav_type: 3,
                     fav_id: favid,
-                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 async: true,
                 success: function (data) {
@@ -239,11 +238,11 @@
             $.ajax({
                 cache: false,
                 type: "POST",
-                url: "/org/add_fav/",
+                url: "{% url 'org:add_fav' %}",
                 data: {
                     fav_type: 2,
                     fav_id: favid,
-                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 async: true,
                 success: function (data) {
