新增: 记录用户操作(如登录、登出、注册、修改账号相关、收藏、开始学习课程)       用户消息功能(上述操作将记录在message中，并在消息栏提醒) 修改：get_related_courses中关联用户课程的步骤放在View中，保持单一的推荐功能

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,9 @@
                                 </div>
                             </div>
                         </div>
+                        <a href="{% url 'user:messages' %}">
+                            <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                        </a>
                     {% endif %}
                 </div>
             </div>
