--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -16,7 +16,7 @@
 {% block head_middle_nav %}
     <div class="middle">
         <div class="wp">
-            <a href="index.html"><img class="fl" src="{% static 'images/logo2.png' %}"/></a>
+            <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo2.png' %}"/></a>
             <h1>我的慕学网</h1>
         </div>
     </div>
@@ -24,7 +24,7 @@
 
 {% block custom_bread_tail %}
     {{ block.super }}
-    <li><a href="/user/home/">个人中心</a>></li>
+    <li><a href="{% url 'user:user_info' %}">个人中心</a>></li>
 {% endblock %}
 
 {% block content %}
@@ -35,11 +35,7 @@
                     <li{% if request.path|slice:'11' == '/users/info/' %} class="active2"{% endif %}><a href="{% url 'user:user_info' %}">个人资料</a></li>
                     <li{% if request.path|slice:'18' == '/users/my_course/' %} class="active2"{% endif %}><a href="{% url 'user:my_course' %}">我的课程</a></li>
                     <li{% if request.path|slice:'11' == '/users/fav_' %} class="active2"{% endif %}><a href="{% url 'user:fav_org' %}">我的收藏</a></li>
-                    <li{% if request.path|slice:'15' == '/users/my_msg/' %} class="active2"{% endif %}>
-                        <a href="usercenter-message.html" style="position: relative;">
-                            我的消息
-                        </a>
-                    </li>
+                    <li{% if request.path|slice:'16' == '/users/messages/' %} class="active2"{% endif %}><a href="{% url 'user:messages' %}" style="position: relative;">我的消息</a></li>
                 </ul>
             </div>
 
