--- a/templates/course-detail.html
+++ b/templates/course-detail.html
@@ -61,7 +61,7 @@
                         <div class="group-share-box">
                             <div class="bdsharebuttonbox"
                                  data-text="django开始了"
-                                 data-desc="我在#慕课网#发现了"
+                                 data-desc="我在#Lighten#发现了"
                                  data-comment=""
                                  data-url="/group/groupdetail/15/">
                                 <span class="fl">分享到：</span>
