--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <title>慕学在线网登录</title>
+    <title>Lighten - 登录</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 </head>
@@ -42,9 +42,9 @@
 <header>
     <div class="c-box fff-box">
         <div class="wp header-box">
-            <p class="fl hd-tips">慕学在线网，在线学习平台！</p>
+            <p class="fl hd-tips">Lighten，在线学习平台！</p>
             <ul class="fr hd-bar">
-                <li>服务电话：<span>33333333</span></li>
+                <li>服务电话：<span>23333333</span></li>
                 <li class="active"><a href="{% url 'login' %}">[登录]</a></li>
                 <li><a href="{% url 'register' %}">[注册]</a></li>
             </ul>
@@ -98,7 +98,7 @@
                     <input class="btn btn-green" id="jsLoginBtn" type="submit" value="立即登录 > "/>
                     {% csrf_token %}
                 </form>
-                <p class="form-p">没有慕学在线网帐号？<a href="{% url 'register' %}">[立即注册]</a></p>
+                <p class="form-p">没有Lighten帐号？<a href="{% url 'register' %}">[立即注册]</a></p>
             </div>
         </div>
     </div>
