--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -17,7 +17,7 @@
     <div class="middle">
         <div class="wp">
             <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo2.png' %}"/></a>
-            <h1>我的慕学网</h1>
+            <h1>Lighten</h1>
         </div>
     </div>
 {% endblock %}
