--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             {# 首行 #}
             <div class="top">
                 <div class="wp">
-                    <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+                    <div class="fl"><p>服务电话：<b>23333333</b></p></div>
                     {% if not request.user.is_authenticated %}
                         <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
@@ -79,7 +79,7 @@
                 {# 搜索框 #}
                 <div class="middle">
                     <div class="wp">
-                        <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                        <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.png' %}"/></a>
                         <div class="searchbox fr">
                             <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -152,7 +152,7 @@
                     <li class="code"><img src="{% static 'images/code.jpg' %}"/>
                         <p class="center">扫描关注微信</p></li>
                     <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
-                        <p class="tell">33333333</p>
+                        <p class="tell">23333333</p>
                         <p class="time">周一至周日 9:00-18:00</p></li>
                 </ul>
 
