--- a/templates/login.html
+++ b/templates/login.html
@@ -64,9 +64,9 @@
             <div class="fl slide">
                 <div class="imgslide">
                     <ul class="imgs">
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}"/></a></li>
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}"/></a></li>
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}"/></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static 'images/golang.jpg' %}"/></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static 'images/redis.jpg' %}"/></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static 'images/docker.jpg' %}"/></a></li>
                     </ul>
                 </div>
                 <div class="unslider-arrow prev"></div>
