--- a/templates/course-video.html
+++ b/templates/course-video.html
@@ -127,11 +127,11 @@
                                 <h4>讲师提示</h4>
                                 <div class="teacher-info">
                                     {# todo teacher #}
-                                    <a href="/u/315464/courses?sort=publish" target="_blank">
+                                    <a href="{% url 'org:teacher_detail' course.teacher.id %}" target="_blank">
                                         <img src='{{ MEDIA_URL }}{{ course.teacher.image }}' width='80' height='80'/>
                                     </a>
                                     <span class="tit">
-                                        <a href="/u/315464/courses?sort=publish"
+                                        <a href="{% url 'org:teacher_detail' course.teacher.id %}"
                                            target="_blank">{{ course.teacher.name }}</a>
                                     </span>
                                     <span class="job">{{ course.teacher.work_position }}</span>
@@ -166,18 +166,6 @@
                                                     </a>
                                                 </li>
                                             {% endfor %}
-                                        </ul>
-                                    </div>
-
-                                    <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="plan">
-                                        <ul class="other-list">
-                                            <li class="curr">
-                                                <a href="/course/programdetail/pid/31?src=sug" target="_blank">
-                                                    <img src="http://img.mukewang.com/56551e6700018b0c09600720-240-135.jpg"
-                                                         alt="Java工程师">
-                                                    <span class="name autowrap">Java工程师</span>
-                                                </a>
-                                            </li>
                                         </ul>
                                     </div>
                                 </div>
